--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -526,21 +526,16 @@ video {
   margin-bottom: 1.75rem;
 }
 
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.mb-2 {
-  margin-bottom: 0.5rem;
-}
-
-.mb-4 {
-  margin-bottom: 1rem;
+.mb-5 {
+  margin-bottom: 1.25rem;
 }
 
 .mb-6 {
   margin-bottom: 1.5rem;
+}
+
+.mb-7 {
+  margin-bottom: 1.75rem;
 }
 
 .mr-3 {
@@ -551,12 +546,12 @@ video {
   margin-right: 1rem;
 }
 
-.mb-5 {
-  margin-bottom: 1.25rem;
+.mb-4 {
+  margin-bottom: 1rem;
 }
 
-.mb-7 {
-  margin-bottom: 1.75rem;
+.mb-3 {
+  margin-bottom: 0.75rem;
 }
 
 .inline-block {
@@ -575,18 +570,6 @@ video {
   height: 1rem;
 }
 
-.h-full {
-  height: 100%;
-}
-
-.h-auto {
-  height: auto;
-}
-
-.h-\[100\%\] {
-  height: 100%;
-}
-
 .h-\[100vh\] {
   height: 100vh;
 }
@@ -603,16 +586,8 @@ video {
   width: 100%;
 }
 
-.flex-col {
-  flex-direction: column;
-}
-
 .place-items-center {
   place-items: center;
-}
-
-.items-end {
-  align-items: flex-end;
 }
 
 .items-center {
@@ -667,15 +642,6 @@ video {
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
-}
-
-.object-fill {
-  -o-object-fit: fill;
-     object-fit: fill;
-}
-
-.p-7 {
-  padding: 1.75rem;
 }
 
 .p-8 {
@@ -758,6 +724,22 @@ video {
 }
 
 @media (min-width: 710px) {
+  .sx\:mb-6 {
+    margin-bottom: 1.5rem;
+  }
+
+  .sx\:mb-5 {
+    margin-bottom: 1.25rem;
+  }
+
+  .sx\:mr-4 {
+    margin-right: 1rem;
+  }
+
+  .sx\:mb-7 {
+    margin-bottom: 1.75rem;
+  }
+
   .sx\:block {
     display: block;
   }
@@ -770,44 +752,8 @@ video {
     display: none;
   }
 
-  .sx\:h-52 {
-    height: 13rem;
-  }
-
-  .sx\:h-96 {
-    height: 24rem;
-  }
-
   .sx\:h-\[28rem\] {
     height: 28rem;
-  }
-
-  .sx\:w-20 {
-    width: 5rem;
-  }
-
-  .sx\:w-24 {
-    width: 6rem;
-  }
-
-  .sx\:w-32 {
-    width: 8rem;
-  }
-
-  .sx\:w-40 {
-    width: 10rem;
-  }
-
-  .sx\:w-64 {
-    width: 16rem;
-  }
-
-  .sx\:w-80 {
-    width: 20rem;
-  }
-
-  .sx\:w-96 {
-    width: 24rem;
   }
 
   .sx\:w-72 {
@@ -824,11 +770,11 @@ video {
     border-bottom-right-radius: 0.75rem;
   }
 
-  .sx\:rounded-tr-none {
-    border-top-right-radius: 0px;
-  }
-
   .sx\:rounded-bl-none {
     border-bottom-left-radius: 0px;
+  }
+
+  .sx\:rounded-tr-none {
+    border-top-right-radius: 0px;
   }
 }
